# rainmaker-bot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json  template-version
.claude/agents/: architect.md  developer.md  reviewer.md  tester.md
.claude/workflows/: review-changes.js  tm-review-changes.js  tm-review-codebase.js
.github/workflows/: backfill.yml  backup.yml  ci.yml  daily-run.yml  keepalive.yml  regrade.yml
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: AccuracyGrid.tsx  BetsTable.tsx  CalibrationPanel.tsx  KpiStrip.tsx  PnlChart.tsx  (+2 more)
reviews/: 2026-06-14-codebase-review.md
scripts/: notify_failure.sh
tests/: test_aggregate.py  test_asos.py  test_backfill.py  test_backfill_venue_routing.py  test_backtest.py  test_backtest_io.py  test_base.py  test_calibration.py  test_cli.py  test_clob_prices.py  test_config.py  test_distribution.py  test_domain.py  test_edge.py  test_golden_e2e.py  test_httpclient.py  test_kalshi_client.py  test_kalshi_markets.py  test_kalshi_ncei_proxy.py  test_kalshi_precip_markets.py  test_live_calibration.py  test_migrate.py  test_nws.py  test_openmeteo.py  test_outcomes.py  test_pnl_backtest.py  test_polymarket_client.py  test_polymarket_markets.py  test_polymarket_trades.py  test_precip_distribution.py  test_precip_forecast.py  test_precip_markets.py  test_precip_outcomes.py  test_prune.py  test_render.py  test_settle.py  test_settle_venue_routing.py  test_settlement_divergence.py  test_store_db.py  test_store_postgres.py  (+2 more)
(+127 files in other folders)
